PPC64: fix string intrinsics after CompactStrings change

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b105
    • ppc

      After the integration of the change "8141132: JEP 254: Compact Strings" the old string intrinsics are broken on PPC64 (even with -XX:-CompactStrings).

      This change will fix the old intrinsics to work for the case -XX:-CompactStrings.

      Implementing new or improving the current intrinsics to work with -XX:+CompactStrings will be done in an additional change.

            Assignee:
            Volker Simonis
            Reporter:
            Volker Simonis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: