8145336: PPC64: fix string intrinsics after CompactStrings change

Reviewed-by: mdoerr, aph, kvn